// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoverageChart coverage danger 1`] = `
.emotion-3 {
  position: relative;
  width: 120px;
  height: 120px;
}

.emotion-0 {
  position: absolute;
  top: 10px;
  left: 20px;
  width: 80px;
}

.emotion-1 {
  position: absolute;
  top: 10px;
  left: 20px;
  height: 80px;
  width: 80px;
  line-height: 80px;
  text-align: center;
  font-size: 14px;
}

.emotion-2 {
  position: absolute;
  bottom: 0;
  width: 100%;
  text-align: center;
  padding: 5px 15px;
  margin: 0;
}

<div
  class=" emotion-3"
>
  <div
    class="emotion-0"
  >
    <div
      class="recharts-wrapper"
      style="position: relative; cursor: default; width: 80px; height: 80px;"
    >
      <svg
        class="recharts-surface"
        height="80"
        version="1.1"
        viewBox="0 0 80 80"
        width="80"
      >
        <defs>
          <clippath
            id="recharts1-clip"
          >
            <rect
              height="70"
              width="70"
              x="5"
              y="5"
            />
          </clippath>
        </defs>
        <g
          class="recharts-layer recharts-pie"
        >
          <g
            class="recharts-layer"
          >
            <g
              class="recharts-layer recharts-pie-sector"
            />
            <g
              class="recharts-layer recharts-pie-sector"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="h3 emotion-1"
  >
    10
    %
  </div>
  <div
    class="h6 emotion-2"
  >
    title
  </div>
</div>
`;

exports[`CoverageChart coverage success 1`] = `
.emotion-3 {
  position: relative;
  width: 120px;
  height: 120px;
}

.emotion-0 {
  position: absolute;
  top: 10px;
  left: 20px;
  width: 80px;
}

.emotion-1 {
  position: absolute;
  top: 10px;
  left: 20px;
  height: 80px;
  width: 80px;
  line-height: 80px;
  text-align: center;
  font-size: 14px;
}

.emotion-2 {
  position: absolute;
  bottom: 0;
  width: 100%;
  text-align: center;
  padding: 5px 15px;
  margin: 0;
}

<div
  class=" emotion-3"
>
  <div
    class="emotion-0"
  >
    <div
      class="recharts-wrapper"
      style="position: relative; cursor: default; width: 80px; height: 80px;"
    >
      <svg
        class="recharts-surface"
        height="80"
        version="1.1"
        viewBox="0 0 80 80"
        width="80"
      >
        <defs>
          <clippath
            id="recharts5-clip"
          >
            <rect
              height="70"
              width="70"
              x="5"
              y="5"
            />
          </clippath>
        </defs>
        <g
          class="recharts-layer recharts-pie"
        >
          <g
            class="recharts-layer"
          >
            <g
              class="recharts-layer recharts-pie-sector"
            />
            <g
              class="recharts-layer recharts-pie-sector"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="h3 emotion-1"
  >
    50
    %
  </div>
  <div
    class="h6 emotion-2"
  >
    title
  </div>
</div>
`;

exports[`CoverageChart coverage warning 1`] = `
.emotion-3 {
  position: relative;
  width: 120px;
  height: 120px;
}

.emotion-0 {
  position: absolute;
  top: 10px;
  left: 20px;
  width: 80px;
}

.emotion-1 {
  position: absolute;
  top: 10px;
  left: 20px;
  height: 80px;
  width: 80px;
  line-height: 80px;
  text-align: center;
  font-size: 14px;
}

.emotion-2 {
  position: absolute;
  bottom: 0;
  width: 100%;
  text-align: center;
  padding: 5px 15px;
  margin: 0;
}

<div
  class=" emotion-3"
>
  <div
    class="emotion-0"
  >
    <div
      class="recharts-wrapper"
      style="position: relative; cursor: default; width: 80px; height: 80px;"
    >
      <svg
        class="recharts-surface"
        height="80"
        version="1.1"
        viewBox="0 0 80 80"
        width="80"
      >
        <defs>
          <clippath
            id="recharts3-clip"
          >
            <rect
              height="70"
              width="70"
              x="5"
              y="5"
            />
          </clippath>
        </defs>
        <g
          class="recharts-layer recharts-pie"
        >
          <g
            class="recharts-layer"
          >
            <g
              class="recharts-layer recharts-pie-sector"
            />
            <g
              class="recharts-layer recharts-pie-sector"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="h3 emotion-1"
  >
    30
    %
  </div>
  <div
    class="h6 emotion-2"
  >
    title
  </div>
</div>
`;

exports[`CoverageChart dark 1`] = `
.emotion-3 {
  position: relative;
  width: 120px;
  height: 120px;
}

.emotion-0 {
  position: absolute;
  top: 10px;
  left: 20px;
  width: 80px;
}

.emotion-1 {
  position: absolute;
  top: 10px;
  left: 20px;
  height: 80px;
  width: 80px;
  line-height: 80px;
  text-align: center;
  font-size: 14px;
  font-weight: 400;
}

.emotion-2 {
  position: absolute;
  bottom: 0;
  width: 100%;
  text-align: center;
  padding: 5px 15px;
  margin: 0;
  font-weight: 100;
}

<div
  class=" emotion-3"
>
  <div
    class="emotion-0"
  >
    <div
      class="recharts-wrapper"
      style="position: relative; cursor: default; width: 80px; height: 80px;"
    >
      <svg
        class="recharts-surface"
        height="80"
        version="1.1"
        viewBox="0 0 80 80"
        width="80"
      >
        <defs>
          <clippath
            id="recharts7-clip"
          >
            <rect
              height="70"
              width="70"
              x="5"
              y="5"
            />
          </clippath>
        </defs>
        <g
          class="recharts-layer recharts-pie"
        >
          <g
            class="recharts-layer"
          >
            <g
              class="recharts-layer recharts-pie-sector"
            />
            <g
              class="recharts-layer recharts-pie-sector"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="h3 emotion-1"
  >
    50
    %
  </div>
  <div
    class="h6 emotion-2"
  >
    title
  </div>
</div>
`;
